changing footer distance to page content (avoid overlap)

--- a/application/static/style.css
+++ b/application/static/style.css
@@ -325,7 +325,7 @@ html, body {
   margin-top: -50px; /* negative value of footer height */
   height: 50px;
   clear:both;
-  padding-top:20px;
+  padding-top:50px;
 } 
 
 
